fix bower.json ignores

--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,8 @@
     "src",
     "node_test.js",
     ".git",
+    ".travis.yml",
+    ".bowerrc",
     ".gitignore",
     ".gitattributes",
     ".editorconfig",
