--- a/.jshintrc
+++ b/.jshintrc
@@ -14,8 +14,9 @@
   "regexp": true,
   "undef": true,
   "unused": true,
-  "strict": false,
+  "strict": true,
   "trailing": true,
   "smarttabs": true,
+  "validthis": true,
   "white": true
 }
