--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "grunt-bower-task": ">= 0.3.x",
     "grunt-mocha-test": ">= 0.9.x",
     "grunt-jekyll": ">= 0.4.x",
-    "grunt-template": ">= 0.2.x"
+    "grunt-template": ">= 0.2.x",
+    "grunt-matter": ">= 0.1.x"
   }
 }
