--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xmlrpc-message-umd",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "homepage": "https://github.com/T1st3/xmlrpc-message-umd",
   "description": "A XMLRPC message builder written with UMD definition",
   "keywords": [
@@ -30,26 +30,31 @@
   "engines": {
     "node": ">= 0.10.0"
   },
+  "dependencies": {},
   "devDependencies": {
     "grunt": ">= 0.4.x",
+    "load-grunt-tasks": ">= 0.3.x",
+    "time-grunt": ">= 0.2.x",
+    "grunt-contrib-copy": ">= 0.5.x",
+    "grunt-contrib-concat": ">= 0.4.x",
+    "grunt-contrib-clean": ">= 0.5.x",
+    "grunt-contrib-compress": ">= 0.8.x",
     "grunt-contrib-watch": ">= 0.5.x",
     "grunt-contrib-connect": ">= 0.6.x",
     "grunt-open": ">= 0.2.x",
     "connect-livereload": ">= 0.3.x",
     "grunt-contrib-jshint": ">= 0.8.x",
-    "grunt-contrib-uglify": ">= 0.3.x",
-    "grunt-contrib-copy": ">= 0.5.x",
-    "grunt-jsdoc": ">= 0.5.x",
-    "grunt-jscs-checker": ">= 0.3.x",
-    "grunt-version": ">= 0.3.x",
-    "load-grunt-tasks": ">= 0.3.x",
-    "time-grunt": ">= 0.2.x",
     "jshint-stylish": ">= 0.1.x",
-    "grunt-bower-task": ">= 0.3.x",
+    "grunt-jscs-checker": ">= 0.3.x",
+    "grunt-contrib-uglify": ">= 0.3.x",
+    "grunt-version": ">= 0.3.x",
     "grunt-mocha-test": ">= 0.9.x",
+    "chai": ">= 1.9.x",
+    "blanket": ">= 1.1.x",
+    "grunt-bower-task": ">= 0.3.x",
+    "grunt-jsdoc": ">= 0.5.x",
     "grunt-jekyll": ">= 0.4.x",
     "grunt-template": ">= 0.2.x",
-    "grunt-matter": ">= 0.1.x",
-    "grunt-contrib-clean": ">= 0.5.x"
+    "grunt-matter": ">= 0.1.x"
   }
 }
