--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "xmlrpc-message-umd",
-  "version": "0.2.3",
-  "homepage": "https://github.com/T1st3/xmlrpc-message-umd",
+  "version": "0.3.0",
+  "homepage": "http://t1st3.github.io/xmlrpc-message-umd",
   "description": "A XMLRPC message builder written with UMD definition",
   "keywords": [
     "amd",
@@ -37,7 +37,8 @@
     "README.md"
   ],
   "dependencies": {
-    "requirejs": "*"
+    "requirejs": "*",
+    "btoa-umd": "*"
   },
   "devDependencies": {
     "jquery": "*",
