Update t1st3-assets dependency to 0.9.2

--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,7 @@
     ".editorconfig",
     ".jshintrc",
     ".jscs.json",
+    ".npmignore",
     "Gruntfile.js",
     "package.json",
     "README.md"
