--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "btoa-umd": "*"
+    "btoa-umd": "~0.2.0"
   },
   "devDependencies": {
     "grunt": ">= 0.4.x",
