--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: node_js
 node_js:
-  - "0.10"
+- '0.10'
 before_install:
-  - npm install -g grunt-cli
+- npm install -g grunt-cli
+deploy:
+  provider: npm
+  email: contact@tiste.org
+  api_key:
+    secure: S+uy6h86WWxQPqk6yzDNZil3clKlDeKYea/SWHFedSMS1IifS+9A07RzTxCGIwxBkgM/jhcX0H0WH22LyjMTM7nzOWi+Ry/fIB4OWS3QBRWXyh5Ft7ydHX42G9oKGhOnxu47qBGbcudByVdAMVG0xvSCIRfyc9BWB5KzKIYm53U=
+  on:
+    tags: true
+    branch: master
