--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xmlrpc-message-umd",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "homepage": "http://t1st3.github.io/xmlrpc-message-umd",
   "description": "A XMLRPC message builder written with UMD definition",
   "keywords": [
@@ -25,47 +25,40 @@
     "dist/xmlrpc-message-umd.js"
   ],
   "scripts": {
-    "test": "grunt test",
-    "posttest": "grunt ci"
-  },
-  "config": {
-    "travis-cov": {
-      "threshold": 70
-    }
+    "test": "./node_modules/mocha/bin/_mocha test/*tests.js --reporter spec"
   },
   "engines": {
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "btoa-umd": "~0.2.0"
+    "btoa-umd": "~0.3.0"
   },
   "devDependencies": {
-    "grunt": ">= 0.4.x",
-    "load-grunt-tasks": ">= 0.3.x",
-    "time-grunt": ">= 0.2.x",
-    "grunt-contrib-copy": ">= 0.5.x",
-    "grunt-contrib-concat": ">= 0.4.x",
-    "grunt-contrib-clean": ">= 0.5.x",
-    "grunt-contrib-compress": ">= 0.8.x",
-    "grunt-contrib-watch": ">= 0.5.x",
-    "grunt-contrib-connect": ">= 0.6.x",
-    "grunt-open": ">= 0.2.x",
-    "connect-livereload": ">= 0.3.x",
-    "grunt-contrib-jshint": ">= 0.8.x",
-    "jshint-stylish": ">= 0.1.x",
-    "grunt-jscs-checker": ">= 0.3.x",
-    "grunt-contrib-uglify": ">= 0.3.x",
-    "grunt-version": ">= 0.3.x",
-    "grunt-mocha-test": ">= 0.9.x",
-    "mocha-lcov-reporter": ">= 0.0.x",
-    "travis-cov": ">= 0.2.x",
-    "chai": ">= 1.9.x",
-    "blanket": ">= 1.1.x",
-    "grunt-coveralls": ">= 0.3.x",
-    "grunt-bower-task": ">= 0.3.x",
-    "grunt-jsdoc": ">= 0.5.x",
-    "grunt-jekyll": ">= 0.4.x",
-    "grunt-template": ">= 0.2.x",
-    "grunt-banner": ">= 0.2.x"
+    "grunt": "~0.4.5",
+    "load-grunt-tasks": "~0.4.0",
+    "time-grunt": "~0.3.1",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-compress": "~0.8.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-connect": "~0.7.1",
+    "grunt-open": "~0.2.3",
+    "connect-livereload": "~0.4.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "jshint-stylish": "~0.2.0",
+    "grunt-jscs-checker": "~0.4.3",
+    "mocha": "~1.18.2",
+    "chai": "~1.9.1",
+    "istanbul": "~0.2.9",
+    "coveralls": "~2.10.0",
+    "grunt-version": "~0.3.0",
+    "grunt-bower-task": "~0.3.4",
+    "grunt-jsdoc": "~0.5.4",
+    "grunt-jekyll": "~0.4.2",
+    "grunt-template": "~0.2.3",
+    "grunt-banner": "~0.2.2",
+    "grunt-shell": "~0.7.0"
   }
 }
