--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xmlrpc-message-umd",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "homepage": "http://t1st3.github.io/xmlrpc-message-umd",
   "description": "A XMLRPC message builder written with UMD definition",
   "keywords": [
@@ -31,7 +31,7 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "btoa-umd": "~0.4.0"
+    "btoa-umd": "~0.4.2"
   },
   "devDependencies": {
     "lodash": "~2.4.1",
@@ -49,12 +49,15 @@
     "browser-sync": "~1.1.2",
     "gulp-jshint": "~1.6.4",
     "jshint-stylish": "~0.2.0",
-    "gulp-jscs": "~0.5.0",
+    "gulp-jscs": "~0.6.0",
     "mocha": "~1.20.1",
     "chai": "~1.9.1",
     "istanbul": "~0.2.14",
     "coveralls": "~2.10.1",
     "gulp-jsdoc": "~0.1.4",
-    "gulp-bower": "~0.0.6"
+    "gulp-bower": "~0.0.6",
+    "qr-image": "~1.2.0",
+    "gulp-imagemin": "~0.6.1",
+    "dependo": "~0.1.3"
   }
 }
