--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "xmlrpc-message-umd",
-  "version": "0.5.6",
+  "version": "0.5.5",
   "homepage": "http://t1st3.github.io/xmlrpc-message-umd",
   "description": "A XMLRPC message builder written with UMD definition",
   "keywords": [
@@ -13,7 +13,7 @@
   ],
   "license": "MIT",
   "authors": [
-    "T1st3"
+    "T1st3 <contact@tiste.org> (http://www.tiste.org/)"
   ],
   "main": "dist/xmlrpc-message-umd.js",
   "ignore": [
