--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
 - '0.10'
 after_success:
-- istanbul cover ./node_modules/mocha/bin/_mocha test/*tests.js --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+- gulp ci
 deploy:
   provider: npm
   email: contact@tiste.org
