--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xmlrpc-message-umd",
-  "version": "0.5.10",
+  "version": "0.6.0",
   "homepage": "http://t1st3.github.io/xmlrpc-message-umd",
   "description": "A XMLRPC message builder written with UMD definition",
   "keywords": [
@@ -23,43 +23,45 @@
     "dist/xmlrpc-message-umd.js"
   ],
   "scripts": {
-    "test": "./node_modules/mocha/bin/_mocha test/*tests.js --reporter spec"
+    "test": "gulp test"
   },
   "engines": {
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "btoa-umd": "~0.4.6"
+    "btoa-umd": "~0.5.1"
   },
   "devDependencies": {
-    "lodash": "~2.4.1",
-    "gulp": "~3.8.5",
-    "gulp-notify": "~1.4.0",
-    "gulp-concat": "~2.2.0",
-    "gulp-rename": "~1.2.0",
-    "gulp-replace": "~0.4.0",
-    "del": "~0.1.1",
-    "gulp-gzip": "~0.0.8",
-    "gulp-uglify": "~0.3.1",
-    "gulp-template": "~0.1.1",
-    "gulp-header": "~1.0.2",
-    "browser-sync": "~1.1.2",
-    "gulp-jshint": "~1.6.4",
-    "jshint-stylish": "~0.2.0",
-    "gulp-jscs": "~0.6.0",
-    "mocha": "~1.20.1",
+    "browser-sync": "~1.3.0",
     "chai": "~1.9.1",
-    "istanbul": "~0.2.16",
-    "coveralls": "~2.11.0",
-    "gulp-jsdoc": "~0.1.4",
-    "gulp-bower": "~0.0.6",
-    "qr-image": "~1.2.0",
-    "gulp-imagemin": "~0.6.1",
+    "chalk": "~0.5.1",
+    "changelog": "~1.0.5",
+    "coveralls": "~2.11.1",
+    "cowsay": "~1.0.3",
+    "del": "~0.1.1",
     "dependo": "~0.1.3",
     "figlet": "~1.0.9",
-    "cowsay": "~1.0.3",
-    "qrcode-terminal": "~0.9.4",
+    "gulp": "~3.8.6",
+    "gulp-bower": "~0.0.6",
+    "gulp-concat": "~2.3.3",
+    "gulp-gzip": "~0.0.8",
+    "gulp-header": "~1.0.5",
+    "gulp-imagemin": "~0.6.1",
+    "gulp-jscs": "~0.6.0",
+    "gulp-jsdoc": "~0.1.4",
+    "gulp-jshint": "~1.7.1",
+    "gulp-notify": "~1.4.0",
+    "gulp-rename": "~1.2.0",
+    "gulp-replace": "~0.4.0",
+    "gulp-template": "~0.1.1",
+    "gulp-uglify": "~0.3.1",
     "ip": "~0.3.0",
-    "changelog": "~1.0.5"
+    "istanbul": "~0.3.0",
+    "jshint-stylish": "~0.4.0",
+    "lodash": "~2.4.1",
+    "mocha": "~1.20.1",
+    "mocha-phantomjs": "~3.5.0",
+    "qr-image": "~1.2.0",
+    "qrcode-terminal": "~0.9.4"
   }
 }
