--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "xmlrpc-message-umd",
-  "version": "0.6.2",
-  "homepage": "http://t1st3.github.io/xmlrpc-message-umd",
+  "version": "0.7.0",
+  "homepage": "http://www.tiste.org/xmlrpc-message-umd",
   "description": "A XMLRPC message builder written with UMD definition",
   "keywords": [
     "umd",
@@ -23,6 +23,7 @@
     "test",
     ".git",
     ".travis.yml",
+    ".istanbul.yml",
     ".bowerrc",
     ".gitignore",
     ".gitattributes",
