--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xmlrpc-message-umd",
-  "version": "0.6.2",
-  "homepage": "http://t1st3.github.io/xmlrpc-message-umd",
+  "version": "0.7.0",
+  "homepage": "http://www.tiste.org/xmlrpc-message-umd",
   "description": "A XMLRPC message builder written with UMD definition",
   "keywords": [
     "umd",
@@ -32,10 +32,11 @@
     "btoa-umd": "~0.5.3"
   },
   "devDependencies": {
-    "browser-sync": "~1.3.2",
+    "browser-sync": "~1.3.3",
     "chai": "~1.9.1",
     "chalk": "~0.5.1",
     "changelog": "~1.0.5",
+    "codeclimate-test-reporter": "0.0.3",
     "coveralls": "~2.11.1",
     "cowsay": "~1.0.3",
     "del": "~0.1.1",
