--- a/package.json
+++ b/package.json
@@ -29,19 +29,19 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "btoa-umd": "~0.6.0"
+    "btoa-umd": "~0.6.3"
   },
   "devDependencies": {
     "browser-sync": "~1.3.3",
     "chai": "~1.9.1",
     "chalk": "~0.5.1",
-    "changelog": "~1.0.5",
     "codeclimate-test-reporter": "0.0.3",
     "coveralls": "~2.11.1",
     "cowsay": "~1.0.3",
     "del": "~0.1.1",
     "dependo": "~0.1.3",
     "figlet": "~1.0.10",
+    "github-changes": "0.0.11",
     "gulp": "~3.8.7",
     "gulp-bower": "~0.0.6",
     "gulp-concat": "~2.3.4",
@@ -60,7 +60,7 @@
     "istanbul": "~0.3.0",
     "jshint-stylish": "~0.4.0",
     "lodash": "~2.4.1",
-    "mocha": "~1.21.3",
+    "mocha": "~1.21.4",
     "mocha-phantomjs": "~3.5.0",
     "qr-image": "~1.2.1",
     "qrcode-terminal": "~0.9.4"
