--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "xml"
   ],
   "license": "MIT",
-  "author": "T1st3",
+  "author": "t1st3 <contact@tiste.org> (http://www.tiste.org/)",
   "repository": {
     "type": "git",
     "url": "git://github.com/T1st3/xmlrpc-message-umd.git"
@@ -32,13 +32,13 @@
     "btoa-umd": "~0.6.5"
   },
   "devDependencies": {
-    "browser-sync": "~1.3.3",
+    "browser-sync": "~1.3.5",
     "chai": "~1.9.1",
     "chalk": "~0.5.1",
     "codeclimate-test-reporter": "0.0.3",
     "coveralls": "~2.11.1",
     "cowsay": "~1.0.3",
-    "del": "~0.1.1",
+    "del": "~0.1.2",
     "dependo": "~0.1.3",
     "figlet": "~1.0.10",
     "github-changes": "0.0.11",
@@ -47,11 +47,11 @@
     "gulp-concat": "~2.3.4",
     "gulp-gzip": "~0.0.8",
     "gulp-header": "~1.0.5",
-    "gulp-imagemin": "~0.6.2",
+    "gulp-imagemin": "~1.0.0",
     "gulp-jscs": "~1.1.0",
     "gulp-jsdoc": "~0.1.4",
     "gulp-jshint": "~1.8.4",
-    "gulp-notify": "~1.4.1",
+    "gulp-notify": "~1.4.2",
     "gulp-rename": "~1.2.0",
     "gulp-replace": "~0.4.0",
     "gulp-template": "~1.0.0",
