Set .directory as a forbidden file (useful when working with GNU/Linux & KDE)

--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     ".npmignore",
     "gulpfile.js",
     "package.json",
-    "README.md"
+    "README.md",
+    ".directory"
   ],
   "dependencies": {
     "requirejs": "*",
