--- a/package.json
+++ b/package.json
@@ -29,40 +29,42 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "btoa-umd": "~0.6.7"
+    "btoa-umd": "~0.6"
   },
   "devDependencies": {
-    "browser-sync": "~1.5.1",
-    "chai": "~1.9.1",
-    "chalk": "~0.5.1",
-    "codeclimate-test-reporter": "0.0.3",
-    "coveralls": "~2.11.2",
-    "cowsay": "~1.0.3",
-    "del": "~0.1.3",
-    "dependo": "~0.1.3",
-    "figlet": "~1.1.0",
-    "github-changes": "0.0.12",
-    "gulp": "~3.8.8",
-    "gulp-bower": "~0.0.6",
-    "gulp-concat": "~2.4.1",
-    "gulp-gzip": "~0.0.8",
-    "gulp-header": "~1.1.1",
-    "gulp-imagemin": "~1.0.1",
-    "gulp-jscs": "~1.1.2",
-    "gulp-jsdoc": "~0.1.4",
-    "gulp-jshint": "~1.8.4",
-    "gulp-notify": "~1.7.0",
-    "gulp-rename": "~1.2.0",
-    "gulp-replace": "~0.4.0",
-    "gulp-template": "~1.1.0",
-    "gulp-uglify": "~1.0.1",
-    "ip": "~0.3.1",
-    "istanbul": "~0.3.2",
-    "jshint-stylish": "~1.0.0",
-    "lodash": "~2.4.1",
-    "mocha": "~1.21.4",
-    "mocha-phantomjs": "~3.5.0",
-    "qr-image": "~2.0.0",
-    "qrcode-terminal": "~0.9.5"
+    "browser-sync": "~1.6",
+    "chai": "~1.10",
+    "chalk": "~0.5",
+    "codeclimate-test-reporter": "0.0",
+    "coveralls": "~2.11",
+    "cowsay": "~1.0",
+    "del": "~0.1",
+    "dependo": "~0.1",
+    "figlet": "~1.1",
+    "github-changes": "~0.0",
+    "gulp": "~3.8",
+    "gulp-bower": "~0.0",
+    "gulp-concat": "~2.4",
+    "gulp-gzip": "~0.0",
+    "gulp-header": "~1.2",
+    "gulp-imagemin": "~1.2",
+    "gulp-jscs": "~1.3",
+    "gulp-jsdoc": "~0.1",
+    "gulp-jshint": "~1.9",
+    "gulp-notify": "~2.0",
+    "gulp-rename": "~1.2",
+    "gulp-replace": "~0.5",
+    "gulp-sourcemaps": "~1.2",
+    "gulp-template": "~1.1",
+    "gulp-uglify": "~1.0",
+    "ip": "~0.3",
+    "istanbul": "~0.3",
+    "jshint-stylish": "~1.0",
+    "lodash": "~2.4",
+    "mocha": "~2.0",
+    "mocha-phantomjs": "~3.5",
+    "qr-image": "~2.0",
+    "qrcode-terminal": "~0.9",
+    "somebody": "~1.0"
   }
 }
