chore: update bower ignores

--- a/bower.json
+++ b/bower.json
@@ -15,26 +15,28 @@
   ],
   "main": "dist/xmlrpc-message-umd.js",
   "ignore": [
-    "node_modules",
-    "bower_components",
-    "gh-pages",
-    "docs",
-    "src",
-    "test",
+    ".directory",
+    ".DS_Store",
     ".git",
-    ".travis.yml",
-    ".istanbul.yml",
-    ".bowerrc",
     ".gitignore",
     ".gitattributes",
+    ".mailmap",
+    "node_modules",
+    "package.json",
+    ".npmignore",
+    "bower_components",
+    ".bowerrc",
     ".editorconfig",
     ".jshintrc",
     ".jscs.json",
-    ".npmignore",
+    ".istanbul.yml",
+    ".travis.yml",
+    "src",
+    "test",
+    "gh-pages",
+    "docs",
     "gulpfile.js",
-    "package.json",
-    "README.md",
-    ".directory"
+    "README.md"
   ],
   "dependencies": {
     "requirejs": "*",
