--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "btoa-umd": "~0.6"
   },
   "devDependencies": {
-    "browser-sync": "~1.6",
+    "browser-sync": "~1.7",
     "chai": "~1.10",
     "chalk": "~0.5",
     "codeclimate-test-reporter": "0.0",
@@ -47,7 +47,7 @@
     "gulp-concat": "~2.4",
     "gulp-gzip": "~0.0",
     "gulp-header": "~1.2",
-    "gulp-imagemin": "~1.2",
+    "gulp-imagemin": "~2.0",
     "gulp-jscs": "~1.3",
     "gulp-jsdoc": "~0.1",
     "gulp-jshint": "~1.9",
@@ -61,6 +61,7 @@
     "istanbul": "~0.3",
     "jshint-stylish": "~1.0",
     "lodash": "~2.4",
+    "main-bower-files": "~2.4",
     "mocha": "~2.0",
     "mocha-phantomjs": "~3.5",
     "qr-image": "~2.0",
