--- a/bower.json
+++ b/bower.json
@@ -47,8 +47,52 @@
     "mocha": "~2.0",
     "chai": "~1.10",
     "chai-jquery": "~2.0",
-    "t1st3-assets": "~1.1",
+    "t1st3-assets": "~1.3",
     "codemirror": "~4.7",
     "lodash": "~2.4"
+  },
+  "overrides": {
+    "requirejs": {
+      "main": "require.js"
+    },
+    "jquery": {
+      "main": ["dist/jquery.min.js", "dist/jquery.min.map"]
+    },
+    "bootstrap": {
+      "main": ["dist/js/bootstrap.min.js", "dist/css/bootstrap.min.css", "dist/fonts/*"]
+    },
+    "font-awesome": {
+      "main": ["css/font-awesome.min.css", "fonts/*"]
+    },
+    "modernizr": {
+      "main": "modernizr.js"
+    },
+    "codemirror": {
+      "main": ["lib/codemirror.js", "/mode/javascript/javascript.js", "lib/codemirror.css"]
+    },
+    "respond": {
+      "main": "dest/respond.min.js"
+    },
+    "json3": {
+      "main": "lib/json3.min.js"
+    },
+    "mocha": {
+      "main": ["mocha.js", "mocha.css"]
+    },
+    "chai": {
+      "main": "chai.js"
+    },
+    "chai-jquery": {
+      "main": "chai-jquery.js"
+    },
+    "jshint": {
+      "main": "dist/jshint.js"
+    },
+    "lodash": {
+      "main": "dist/lodash.min.js"
+    },
+    "tist3-assets": {
+      "main": ""
+    }
   }
 }
