--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "xmlrpc-message-umd",
-  "version": "0.7.11",
+  "version": "0.7.12",
   "homepage": "http://www.tiste.org/xmlrpc-message-umd",
   "description": "A XMLRPC message builder written with UMD definition",
   "keywords": [
@@ -13,7 +13,11 @@
   "authors": [
     "T1st3 <contact@tiste.org> (http://www.tiste.org/)"
   ],
-  "main": "dist/xmlrpc-message-umd.js",
+  "main": [
+    "./dist/xmlrpc-message-umd.js",
+    "./dist/xmlrpc-message-umd.min.js",
+    "./dist/xmlrpc-message-umd.js.map"
+  ],
   "ignore": [
     ".directory",
     ".DS_Store",
