--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,16 +1,14 @@
 {
   "generator-t1st3-umd": {
     "ProjectName": "xmlrpc-message-umd",
-    "ProjectVersion": "0.8.1",
+    "ProjectVersion": "0.8.2",
     "ProjectDescr": "A XMLRPC message builder written with UMD definition",
     "ProjectSamples": false,
     "ProjectBowerJson": false,
     "ProjectPackageJson": false,
-    "ProjectGlobalDeps": [
-      {
-        "name": "btoa-umd",
-        "path": "dist/btoa-umd.min.js"
-      }
-    ]
+    "ProjectGlobalDeps": [{
+      "name": "btoa-umd",
+      "path": "dist/btoa-umd.min.js"
+    }]
   }
 }
