--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -6,9 +6,15 @@
     "ProjectSamples": false,
     "ProjectBowerJson": false,
     "ProjectPackageJson": false,
-    "ProjectGlobalDeps": [{
-      "name": "btoa-umd",
-      "path": "dist/btoa-umd.min.js"
-    }]
+    "ProjectGlobalDeps": [
+      {
+        "name": "btoa-umd",
+        "path": "dist/btoa-umd.min.js"
+      }
+    ],
+    "ProjectMainClass": "XmlrpcMessage",
+    "ProjectKeywords": "xmlrpc,builder,xml",
+    "ProjectSrc": false,
+    "ProjectTests": false
   }
 }
