--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -6,11 +6,13 @@
     "ProjectSamples": false,
     "ProjectBowerJson": true,
     "ProjectPackageJson": true,
-    "ProjectGlobalDeps": [{
-      "name": "btoa-umd",
-      "version": "~0.7",
-      "path": "dist/btoa-umd.min.js"
-    }],
+    "ProjectGlobalDeps": [
+      {
+        "name": "btoa-umd",
+        "version": "~0.7",
+        "path": "dist/btoa-umd.min.js"
+      }
+    ],
     "ProjectMainClass": "XmlrpcMessage",
     "ProjectKeywords": "xmlrpc,builder,xml",
     "ProjectSrc": false,
