--- a/package.json
+++ b/package.json
@@ -33,29 +33,31 @@
     "chalk": "~1.0"
   },
   "devDependencies": {
-    "browser-sync": "~2.2",
-    "chai": "~2.1",
-    "codeclimate-test-reporter": "0.0",
-    "coveralls": "~2.11",
-    "cowsay": "~1.0",
-    "del": "~1.1",
-    "figlet": "~1.1",
-    "gulp": "~3.8",
-    "gulp-bower": "~0.0",
-    "gulp-concat": "~2.5",
-    "gulp-jscs": "~1.4",
-    "gulp-jshint": "~1.9",
-    "gulp-notify": "~2.2",
-    "gulp-rename": "~1.2",
-    "gulp-sourcemaps": "~1.5",
-    "gulp-uglify": "~1.1",
-    "ip": "~0.3",
-    "istanbul": "~0.3",
-    "jshint-stylish": "~1.0",
-    "main-bower-files": "~2.6",
-    "mocha": "~2.2",
-    "mocha-phantomjs": "~3.5",
-    "qrcode-terminal": "~0.9",
-    "somebody": "~2.0"
+    "browser-sync": "^2.10.0",
+    "chai": "^3.4.1",
+    "chalk": "^1.0.0",
+    "codeclimate-test-reporter": "^0.1.1",
+    "coveralls": "^2.11.4",
+    "cowsay": "^1.1.2",
+    "del": "^2.1.0",
+    "figlet": "^1.1.1",
+    "gulp": "^3.9.0",
+    "gulp-bower": "0.0.11",
+    "gulp-concat": "^2.6.0",
+    "gulp-jscs": "^3.0.2",
+    "gulp-jshint": "^2.0.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
+    "ip": "^1.1.0",
+    "istanbul": "^0.4.1",
+    "jshint": "^2.8.0",
+    "jshint-stylish": "^2.1.0",
+    "main-bower-files": "^2.9.0",
+    "mocha": "^2.3.4",
+    "mocha-phantomjs": "^4.0.1",
+    "qrcode-terminal": "^0.10.0",
+    "somebody": "^2.0.0"
   }
 }
