--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "btoa-umd": "~0.7",
-    "chalk": "~1.0"
+    "btoa-umd": "^0.7.8"
   },
   "devDependencies": {
     "browser-sync": "^2.10.0",
