--- a/bower.json
+++ b/bower.json
@@ -43,7 +43,7 @@
     "README.md"
   ],
   "dependencies": {
-    "btoa-umd": "~0.7"
+    "btoa-umd": "^0.7.8"
   },
   "devDependencies": {
     "requirejs": "^2.1.22",
