--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xmlrpc-message-umd",
   "version": "0.8.6",
-  "homepage": "http://www.tiste.org/xmlrpc-message-umd",
+  "homepage": "https://github.com/T1st3/xmlrpc-message-umd",
   "description": "A XMLRPC message builder written with UMD definition",
   "keywords": [
     "xmlrpc",
@@ -41,13 +41,13 @@
     "gulp": "^3.9.0",
     "gulp-bower": "0.0.11",
     "gulp-concat": "^2.6.0",
+    "gulp-istanbul": "^0.10.3",
     "gulp-jscs": "^3.0.2",
     "gulp-jshint": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "ip": "^1.1.0",
-    "istanbul": "^0.4.1",
     "jshint": "^2.8.0",
     "jshint-stylish": "^2.1.0",
     "main-bower-files": "^2.9.0",
