--- a/package.json
+++ b/package.json
@@ -28,23 +28,25 @@
   "engines": {
     "node": ">= 0.10.0"
   },
-  "dependencies": {
-    "btoa-umd": "^0.7.8"
-  },
+  "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.10.0",
     "chai": "^3.4.1",
-    "chalk": "^1.0.0",
+    "chalk": "^1.1.1",
     "codeclimate-test-reporter": "^0.1.1",
-    "coveralls": "^2.11.4",
-    "del": "^2.1.0",
+    "coveralls": "^2.11.6",
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-bower": "0.0.11",
+    "gulp-bump": "^1.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-istanbul": "^0.10.3",
     "gulp-jscs": "^3.0.2",
     "gulp-jshint": "^2.0.0",
+    "gulp-mocha": "^2.2.0",
+    "gulp-mocha-phantomjs": "^0.10.1",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "ip": "^1.1.0",
@@ -52,7 +54,6 @@
     "jshint-stylish": "^2.1.0",
     "main-bower-files": "^2.9.0",
     "mocha": "^2.3.4",
-    "mocha-phantomjs": "^4.0.1",
     "qrcode-terminal": "^0.10.0",
     "somebody": "^2.0.0"
   }
